--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,8 +1,8 @@
 {
   "version": "1.0",
   "manifest_version": 2,
-  "name": "React Boilerplate Extension",
-  "description": "Modern React boilerplate for Firefox and Chrome extensions.",
+  "name": "Jira Dev Tools",
+  "description": "Streamline your developer experience and save time",
   "content_scripts": [
     {
       "matches": [
@@ -14,20 +14,15 @@
       ]
     }
   ],
-  "background": {
-    "scripts": [
-      "lib/js/browser-polyfill.js",
-      "background.js"
-    ]
-  },
   "browser_action": {
     "default_icon": "img/icon.png",
     "default_popup": "popup.html"
   },
   "permissions": [
-    "http://myapi.com",
     "storage",
-    "unlimitedStorage"
+    "unlimitedStorage",
+    "tabs",
+    "activeTab"
   ],
   "icons": {
     "128": "img/icon.png"
@@ -35,11 +30,6 @@
   "web_accessible_resources": [
     "sidebar.html"
   ],
-  "sidebar_action": {
-    "default_icon": "img/icon.png",
-    "default_title" : "Sidebar",
-    "default_panel": "sidebar.html"
-  },
   "options_ui": {
     "page": "./options.html",
     "open_in_tab": true
