--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "react-extension-boilerplate",
+  "name": "snow-dog",
   "version": "1.0.0",
-  "description": "Modern React boilerplate for Firefox and Chrome extensions",
+  "description": "Jira + Git Helper",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start:chrome": "npm run chrome-launch",
@@ -30,12 +30,11 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/kryptokinght/react-extension-boilerplate.git"
+    "url": "https://github.com/ddesilva/snow-dog.git"
   },
-  "author": "Minanshu Singh <minanshu.1998@gmail.com>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/kryptokinght/react-extension-boilerplate/issues"
+    "url": "https://github.com/ddesilva/snow-dog.git"
   },
   "dependencies": {
     "@babel/core": "^7.2.2",
